# tiny-jvm

./: .gitignore  CMakeLists.txt  README.md  String.h  jvm_main.cpp  types.cpp
api/src/java/lang/: System.java
bk/: target_info_t.h
classfile/: attribute_info.cpp  attribute_info.h  class_reader.cpp  class_reader.h  classfile_parser.cpp  classfile_parser.h  const.h  constant.cpp  constant.h  constant_pool.cpp  constant_pool.h  element_value.cpp  element_value.h  exception_table.cpp  exception_table.h  field_info.cpp  field_info.h  method_info.cpp  method_info.h  types.h
include/classfile/: annotations.h  attribute_info.h  class_reader.h  classfile_parser.h  constant.h  field_info.h
include/shared/: string.h  types.h  vm_utils.h
src/: CMakeLists.txt
src/bytecode/: CMakeLists.txt  bytecode_interpreter.cpp  bytecode_interpreter.h
src/classfile/: CMakeLists.txt  String.cpp  String.h  annotation_default.cpp  annotation_default.h  annotation_default.hpp  annotation_element_value.cpp  annotation_element_value.h  annotation_entry.h  annotations.hpp  array_element_value.h  attribute_info.cpp  attribute_info.h  bootstrap_method.cpp  bootstrap_method.h  bootstrap_methods_attribute.cpp  bootstrap_methods_attribute.h  class_loader.cpp  class_loader.h  class_reader.cpp  class_reader.h  classfile_parser.cpp  classfile_parser.h  code_attribute.cpp  const.h  constant.h  constant.hpp  constant_pool.h  constant_pool.hpp  constant_value_attribute.cpp  constant_value_attribute.h  data_output_stream.hpp  deprecated_attribute.cpp  deprecated_attribute.h  element_value.cpp  element_value.h  element_value_pair.h  enclosing_method_attribute.cpp  enclosing_method_attribute.h  enum_element_value.cpp  (+58 more)
src/classpath/: CMakeLists.txt  system_dictionary.cpp  system_dictionary.h
src/jni/: CMakeLists.txt  jni.cpp  jni.h
src/native/: CMakeLists.txt  java_io_printstream.cpp  java_io_printstream.h  java_lang_system.cpp  java_lang_system.h
src/runtime/: CMakeLists.txt  instance_class.cpp  instance_class.h  instance_oop.h  java_frame.h  java_thread.cpp  klass.h  method.cpp  method.h  native_handler.h  native_method_pool.h  oop_desc.h  oop_value_type.cpp  oop_value_type.h  opcode_executor.cpp  opcode_executor.h  runtime.cpp  runtime.h
src/shared/: CMakeLists.txt  const.cpp  const.h  fs.cpp  fs.h  hashmap.h  jstring.cpp  jstring.h  string.cpp  tiny_jvm.h  types.h  ujvm.h  vm_utils.cpp
src/ujvm/: CMakeLists.txt  class.cpp  class.h  class_loader.cpp  class_loader.h  kclass.cpp  kclass.h  ujvm.cpp  ujvm.h
src/ujvm/bytecode/: bytecode_interpreter.cpp  bytecode_interpreter.h  opcode_executor.h
src/ujvm/classfile/: annotation_entry.cpp  annotation_entry.h  annotations.h  annotations.hpp  array_element_value.cpp  array_element_value.h  attribute_info.cpp  attribute_info.h  bootstrap_method.cpp  bootstrap_method.h  bootstrap_methods_attribute.h  class_element_value.cpp  class_element_value.h  class_reader.cpp  classfile_parser.cpp  classfile_parser.h  code_attribute.cpp  code_attribute.h  const.h  constant.h  constant.hpp  constant_pool.h  data_output_stream.hpp  element_value.cpp  element_value.h  element_value_pair.cpp  exception_table.cpp  exception_table.h  exception_table_attribute.h  field_info.h  inner_classes_attribute.cpp  inner_classes_attribute.h  line_number_table_attribute.h  local_variable_table_attribute.cpp  local_variable_type_table_attribute.h  method_info.cpp  method_info.h  method_parameter.cpp  method_parameter.h  method_prameters_attribute.cpp  (+10 more)
src/ujvm/classpath/: class_loader.cpp  class_loader.h  system_dictionary.cpp  system_dictionary.h
src/ujvm/native/: java_io_printstream.cpp  java_io_printstream.h  java_lang_system.h
src/ujvm/runtime/: bytecode_interpreter.cpp  bytecode_interpreter.h  code_reader.cpp  code_reader.h  common_value.h  frame_list.cpp  frame_list.h  instance_class.cpp  instance_class.h  instance_oop.cpp  instance_oop.h  java_frame.h  java_thread.cpp  java_thread.h  klass.cpp  klass.h  main_thread.cpp  main_thread.h  method.cpp  method.h  native_handler.h  native_method.cpp  native_method.h  native_method_pool.cpp  oop.h  oop_desc.h  oop_value_type.h  opcode_executor.h  runtime.h  system_dictionary.h  thread.cpp  thread.h
test/: CMakeLists.txt  class_reader_test.cpp  data_output_stream_test.cpp  string_test.cpp
test/classfile/: CMakeLists.txt  class_reader_test.cpp  string_test.cpp
test/ujvm/: CMakeLists.txt  helloworld_test.cpp
